# ChangeLog for games-engines/onscripter-en
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*onscripter-en-20101010 (13 Oct 2010)

  13 Oct 2010; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20100221.ebuild, -onscripter-en-20100307.ebuild,
  -onscripter-en-20100309.ebuild, +onscripter-en-20101010.ebuild:
  Bumped. Cleaned out some cruft.

*onscripter-en-20100915 (19 Sep 2010)

  19 Sep 2010; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20100915.ebuild:
  Bumped.

*onscripter-en-20100518 (23 May 2010)

  23 May 2010; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20100518.ebuild:
  Bumped.

*onscripter-en-20100309 (11 Mar 2010)

  11 Mar 2010; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20100130.ebuild, +onscripter-en-20100309.ebuild:
  Bumped. Removed old version.

*onscripter-en-20100307 (08 Mar 2010)

  08 Mar 2010; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20100107.ebuild, -onscripter-en-20100117.ebuild,
  +onscripter-en-20100307.ebuild:
  Bumped. Removed some old versions.

*onscripter-en-20100221 (28 Feb 2010)

  28 Feb 2010; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20100221.ebuild:
  Bumped.

*onscripter-en-20100130 (01 Feb 2010)

  01 Feb 2010; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20091231.ebuild, +onscripter-en-20100130.ebuild:
  Bumped. Removed cruft.

*onscripter-en-20100117 (19 Jan 2010)

  19 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20091227.ebuild, +onscripter-en-20100117.ebuild:
  Bumped. Removed oldest version.

  15 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20091215.ebuild:
  Removed cruft.

*onscripter-en-20100107 (09 Jan 2010)

  09 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20100107.ebuild:
  Bumped.

  07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20080823.ebuild:
  Removed cruft.

*onscripter-en-20091231 (02 Jan 2010)

  02 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20091231.ebuild: