@@ -7,8 +7,10 @@ AUX onscripter-en-20091215-cxxflags.patch 414 RMD160 3253090c088b60a549be24976fe
 DIST onscripter-en-20100518-src.tar.bz2 852970 RMD160 28aea9208fbd1a64edd872c85cf9ca2fa3052ebb SHA1 f423bc47888685682744b9ecaf945cfaf6132a42 SHA256 85fbb630e4c145fc9318404fbe62d5f1591e118e74ba7928d06e1ced89c8c4c1
 DIST onscripter-en-20100915-src.tar.bz2 908090 RMD160 5ce347d384c4df7ee7648699b749946f0574c261 SHA1 7bd811f481bf53ef4906d09467b93723c01e73c3 SHA256 b71dfb224bc4430f170c93e2ed51ea9230da3f7d7004f6f50532e5bfd81d7aa9
 DIST onscripter-en-20101010-src.tar.bz2 917727 RMD160 c4a5feae58c22600eb4e0baa501cfceeb5eba9ac SHA1 cc34b88f8025effba82388be720bf8328aa6f4ab SHA256 26fe8b2e07632147577a26e5588b34930ebd6a682807b89c239baecd9cd78d93
+DIST onscripter-en-20110305-src.tar.bz2 919049 RMD160 92ac8dec21566bf5c62defadacad893057358a52 SHA1 a9867c800f0d669b481d3eab02767f1c779d0119 SHA256 6774dddb72499474a217e973cf055cbad9f7e34e95545e2fc612918b04479d2c
 EBUILD onscripter-en-20100518.ebuild 984 RMD160 e5951c89034dd6035b11310b9a883e9d6b922a4d SHA1 55727a85d6b1fabbdd2005733a8ad2d40c4ace3c SHA256 8748c383b43c831e470a4d8b4a644040b3c2d5e4f926a7ef34992d9d74de2a06
 EBUILD onscripter-en-20100915.ebuild 984 RMD160 e5951c89034dd6035b11310b9a883e9d6b922a4d SHA1 55727a85d6b1fabbdd2005733a8ad2d40c4ace3c SHA256 8748c383b43c831e470a4d8b4a644040b3c2d5e4f926a7ef34992d9d74de2a06
 EBUILD onscripter-en-20101010.ebuild 984 RMD160 e5951c89034dd6035b11310b9a883e9d6b922a4d SHA1 55727a85d6b1fabbdd2005733a8ad2d40c4ace3c SHA256 8748c383b43c831e470a4d8b4a644040b3c2d5e4f926a7ef34992d9d74de2a06
-MISC ChangeLog 3592 RMD160 ecbd033bb07ae0b2ae7f4f04e2edcd8978dc254a SHA1 ba7189c8d9d44e5424cfc2718dce06416d1aba85 SHA256 6965d4784adc01521c51a4a5fa864c8b21e9254ae65656451cf886b0d257c9e4
+EBUILD onscripter-en-20110305.ebuild 915 RMD160 0715d404cbd3d94d9b97acf3b0fa79f04176c2dc SHA1 8ad32448f25a4b361523b8feeac799c2b75daa6c SHA256 90be36ffc592ea4150cc97646ed9f0488bfa281413fc1bf011fec6cd95b375be
+MISC ChangeLog 3725 RMD160 0ac7bd780fd0d6b945674629075f8edf9985abc1 SHA1 1170fc547fbe82347de877fd9b5da6c6d106aadd SHA256 c0bdd3b1f152a07dbc61dd852dfb689d4a18626a7885e7150b38f5d2f98277f2
 MISC metadata.xml 322 RMD160 ae392e7983f4f4d718e919c9d6e42a90d626f770 SHA1 25298823cab9b1a65fd253e1eaf821f2ee1b8148 SHA256 7a1a4d7e2ddfb9cdbda7afab27c0a24e70f150b73ae99565acaf6f656d15a7fe
