@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*onscripter-en-20110305 (06 Mar 2011)
+
+  06 Mar 2011; Michał Ziąbkowski <mziab@o2.pl>
+  +onscripter-en-20110305.ebuild:
+  Bumped.
+
 *onscripter-en-20101010 (13 Oct 2010)
 
   13 Oct 2010; Michał Ziąbkowski <mziab@o2.pl>
